src/test/deca/syntax/invalid/wrong-leq-sign.synt
wrong-leq-sign.deca:14:
